[PACA-263] Implement FHIR 0.1+ MCS claim updates