@@ -1,39 +1,61 @@
 package gov.cms.bfd.server.war.r4.providers.preadj;
 
+import ca.uhn.fhir.context.FhirContext;
+import ca.uhn.fhir.parser.IParser;
 import com.codahale.metrics.MetricRegistry;
 import com.codahale.metrics.Timer;
 import com.newrelic.api.agent.Trace;
 import gov.cms.bfd.model.rda.PreAdjMcsClaim;
 import gov.cms.bfd.model.rda.PreAdjMcsDetail;
 import gov.cms.bfd.model.rda.PreAdjMcsDiagnosisCode;
+import gov.cms.bfd.server.war.commons.TransformerConstants;
 import gov.cms.bfd.server.war.commons.carin.C4BBIdentifierType;
 import gov.cms.bfd.server.war.commons.carin.C4BBOrganizationIdentifierType;
 import gov.cms.bfd.sharedutils.exceptions.BadCodeMonkeyException;
+import java.time.LocalDate;
 import java.time.ZoneId;
-import java.util.ArrayList;
-import java.util.Arrays;
-import java.util.Collections;
 import java.util.Comparator;
 import java.util.Date;
 import java.util.List;
-import org.hl7.fhir.r4.model.CanonicalType;
+import java.util.Map;
+import java.util.Objects;
+import java.util.Optional;
+import java.util.stream.Collectors;
+import java.util.stream.IntStream;
+import org.apache.commons.codec.digest.DigestUtils;
+import org.apache.commons.lang3.ObjectUtils;
 import org.hl7.fhir.r4.model.Claim;
 import org.hl7.fhir.r4.model.CodeableConcept;
 import org.hl7.fhir.r4.model.Coding;
+import org.hl7.fhir.r4.model.Enumerations;
+import org.hl7.fhir.r4.model.Extension;
+import org.hl7.fhir.r4.model.HumanName;
 import org.hl7.fhir.r4.model.Identifier;
 import org.hl7.fhir.r4.model.Meta;
 import org.hl7.fhir.r4.model.Money;
 import org.hl7.fhir.r4.model.Organization;
+import org.hl7.fhir.r4.model.Patient;
+import org.hl7.fhir.r4.model.Period;
+import org.hl7.fhir.r4.model.PositiveIntType;
 import org.hl7.fhir.r4.model.Reference;
 import org.hl7.fhir.r4.model.Resource;
+import org.hl7.fhir.r4.model.StringType;
 import org.hl7.fhir.r4.model.codesystems.ClaimType;
 import org.hl7.fhir.r4.model.codesystems.ProcessPriority;
 
 /** Transforms FISS/MCS instances into FHIR {@link Claim} resources. */
 public class McsClaimTransformerV2 {
 
+  private static final Map<String, Enumerations.AdministrativeGender> GENDER_MAP =
+      Map.of(
+          "m", Enumerations.AdministrativeGender.MALE,
+          "f", Enumerations.AdministrativeGender.FEMALE,
+          "u", Enumerations.AdministrativeGender.UNKNOWN);
+
   private static final String METRIC_NAME =
       MetricRegistry.name(McsClaimTransformerV2.class.getSimpleName(), "transform");
+
+  private static final List<String> CANCELED_STATUS_CODES = List.of("r", "z", "9");
 
   private McsClaimTransformerV2() {}
 
@@ -61,56 +83,123 @@ public class McsClaimTransformerV2 {
     Claim claim = new Claim();
 
     claim.setId("m-" + claimGroup.getIdrClmHdIcn());
-    claim.setMeta(new Meta().setLastUpdated(Date.from(claimGroup.getLastUpdated())));
-    claim.setContained(getContainedProvider(claimGroup));
+    claim.setContained(List.of(getContainedPatient(claimGroup), getContainedProvider(claimGroup)));
+    claim.setExtension(getExtension(claimGroup));
     claim.setIdentifier(getIdentifier(claimGroup));
-    claim.setStatus(Claim.ClaimStatus.ACTIVE);
+    claim.setStatus(
+        CANCELED_STATUS_CODES.contains(claimGroup.getIdrStatusCode().toLowerCase())
+            ? Claim.ClaimStatus.CANCELLED
+            : Claim.ClaimStatus.ACTIVE);
     claim.setType(getType());
+    claim.setBillablePeriod(getBillablePeriod(claimGroup));
     claim.setUse(Claim.Use.CLAIM);
-    claim.setCreated(new Date());
     claim.setPriority(getPriority());
     claim.setTotal(getTotal(claimGroup));
     claim.setProvider(new Reference("#provider-org"));
-    claim.setPatient(getPatient(claimGroup));
+    claim.setPatient(new Reference("#patient"));
     claim.setDiagnosis(getDiagnosis(claimGroup));
-    claim.setProcedure(getProcedure(claimGroup));
+    claim.setItem(getItems(claimGroup));
+
+    FhirContext ctx = FhirContext.forR4();
+    IParser parser = ctx.newJsonParser();
+
+    String claimContent = parser.encodeResourceToString(claim);
+
+    String resourceHash = DigestUtils.sha1Hex(claimContent);
+
+    claim.setCreated(new Date());
+    claim.setMeta(
+        new Meta()
+            .setLastUpdated(Date.from(claimGroup.getLastUpdated()))
+            .setVersionId("f-" + claimGroup.getIdrClmHdIcn() + "-" + resourceHash));
 
     return claim;
   }
 
-  private static List<Resource> getContainedProvider(PreAdjMcsClaim claimGroup) {
-    return Collections.singletonList(
-        new Organization()
-            .setIdentifier(
-                Arrays.asList(
-                    new Identifier()
-                        .setType(
-                            new CodeableConcept(
-                                new Coding(
-                                    C4BBOrganizationIdentifierType.PRN.getSystem(),
-                                    C4BBOrganizationIdentifierType.PRN.toCode(),
-                                    C4BBOrganizationIdentifierType.PRN.getDisplay())))
-                        .setValue(claimGroup.getIdrBillProvNum()),
-                    new Identifier()
-                        .setType(
-                            new CodeableConcept(
-                                new Coding(
-                                    C4BBIdentifierType.NPI.getSystem(),
-                                    C4BBIdentifierType.NPI.toCode(),
-                                    C4BBIdentifierType.NPI.getDisplay())))
-                        .setSystem("http://hl7.org/fhir/sid/us-npi")
-                        .setValue(claimGroup.getIdrBillProvNpi())))
-            .setId("provider-org")
-            .setMeta(
-                new Meta()
-                    .setProfile(
-                        Collections.singletonList(
-                            new CanonicalType(
-                                "http://hl7.org/fhir/us/carin-bb/StructureDefinition/C4BB-Organization")))));
+  private static Resource getContainedPatient(PreAdjMcsClaim claimGroup) {
+    return new Patient()
+        .setIdentifier(
+            List.of(
+                new Identifier()
+                    .setType(
+                        new CodeableConcept(
+                            new Coding(
+                                TransformerConstants.CODING_SYSTEM_HL7_IDENTIFIER_TYPE,
+                                "MC",
+                                "Patient's Medicare Number")))
+                    .setSystem("http://hl7.org/fhir/sid/us-mbi")
+                    .setValue(claimGroup.getIdrClaimMbi())))
+        .setName(
+            List.of(
+                new HumanName()
+                    .setFamily(claimGroup.getIdrBeneLast_1_6())
+                    .setGiven(
+                        List.of(
+                            new StringType(claimGroup.getIdrBeneFirstInit()),
+                            new StringType(claimGroup.getIdrBeneMidInit())))))
+        .setGender(
+            claimGroup.getIdrBeneSex() == null
+                ? null
+                : GENDER_MAP.get(claimGroup.getIdrBeneSex().toLowerCase()))
+        .setId("patient");
+  }
+
+  private static Resource getContainedProvider(PreAdjMcsClaim claimGroup) {
+    Organization organization = new Organization();
+
+    organization.setExtension(
+        List.of(
+            new Extension("https://bluebutton.cms.gov/resources/variables/mcs/idr-bill-prov-type")
+                .setValue(
+                    new Coding(
+                        "https://bluebutton.cms.gov/resources/variables/mcs/idr-bill-prov-type",
+                        claimGroup.getIdrBillProvType(),
+                        null)),
+            new Extension("https://bluebutton.cms.gov/resources/variables/prvdr_spclty")
+                .setValue(
+                    new Coding(
+                        "https://bluebutton.cms.gov/resources/variables/prvdr_spclty",
+                        claimGroup.getIdrBillProvSpec(),
+                        null))));
+
+    organization
+        .setIdentifier(
+            List.of(
+                new Identifier()
+                    .setType(
+                        new CodeableConcept(
+                            new Coding(
+                                C4BBOrganizationIdentifierType.TAX.getSystem(),
+                                C4BBOrganizationIdentifierType.TAX.toCode(),
+                                C4BBOrganizationIdentifierType.TAX.getDisplay())))
+                    .setSystem("https://bluebutton.cms.gov/resources/variables/tax_num")
+                    .setValue(claimGroup.getIdrBillProvEin()),
+                new Identifier()
+                    .setType(
+                        new CodeableConcept(
+                            new Coding(
+                                C4BBIdentifierType.NPI.getSystem(),
+                                C4BBIdentifierType.NPI.toCode(),
+                                C4BBIdentifierType.NPI.getDisplay())))
+                    .setSystem("http://hl7.org/fhir/sid/us-npi")
+                    .setValue(claimGroup.getIdrBillProvNpi())))
+        .setId("provider-org");
+
+    return organization;
+  }
+
+  private static List<Extension> getExtension(PreAdjMcsClaim claimGroup) {
+    return List.of(
+        new Extension("https://bluebutton.cms.gov/resources/variables/mcs/idr-clm-type")
+            .setValue(
+                new Coding(
+                    "https://bluebutton.cms.gov/resources/variables/mcs/idr-clm-type",
+                    claimGroup.getIdrClaimType(),
+                    null)));
   }
 
   private static List<Identifier> getIdentifier(PreAdjMcsClaim claimGroup) {
-    return Collections.singletonList(
+    return List.of(
         new Identifier()
             .setType(
                 new CodeableConcept(
@@ -118,19 +207,24 @@ public class McsClaimTransformerV2 {
                         C4BBIdentifierType.UC.getSystem(),
                         C4BBIdentifierType.UC.toCode(),
                         C4BBIdentifierType.UC.getDisplay())))
-            .setSystem("https://dcgeo.cms.gov/resources/variables/icn")
+            .setSystem("https://bluebutton.cms.gov/resources/variables/carr_clm_cntrl_num")
             .setValue(claimGroup.getIdrClmHdIcn()));
   }
 
   private static CodeableConcept getType() {
     return new CodeableConcept()
         .setCoding(
-            Arrays.asList(
-                new Coding("https://dcgeo.cms.gov/resources/codesystem/rda-type", "MCS", null),
+            List.of(
                 new Coding(
                     ClaimType.PROFESSIONAL.getSystem(),
                     ClaimType.PROFESSIONAL.toCode(),
                     ClaimType.PROFESSIONAL.getDisplay())));
+  }
+
+  private static Period getBillablePeriod(PreAdjMcsClaim claimGroup) {
+    return new Period()
+        .setStart(localDateToDate(claimGroup.getIdrHdrFromDateOfSvc()))
+        .setEnd(localDateToDate(claimGroup.getIdrHdrToDateOfSvc()));
   }
 
   private static CodeableConcept getPriority() {
@@ -156,78 +250,98 @@ public class McsClaimTransformerV2 {
     return total;
   }
 
-  private static Reference getPatient(PreAdjMcsClaim claimGroup) {
-    return new Reference()
-        .setIdentifier(
-            new Identifier()
-                .setType(
-                    new CodeableConcept()
-                        .setCoding(
-                            Collections.singletonList(
-                                new Coding(
-                                    "http://terminology.hl7.org/CodeSystem/v2-0203",
-                                    "MC",
-                                    "Patient's Medicare number"))))
-                .setSystem("http://hl7.org/fhir/sid/us-mbi")
-                .setValue(claimGroup.getIdrClaimMbi()));
-  }
-
   private static List<Claim.DiagnosisComponent> getDiagnosis(PreAdjMcsClaim claimGroup) {
-    List<Claim.DiagnosisComponent> diagnosisComponents = new ArrayList<>();
+    return ObjectUtils.defaultIfNull(claimGroup.getDiagCodes(), List.<PreAdjMcsDiagnosisCode>of())
+        .stream()
+        .map(
+            diagCode -> {
+              String icdVersion = diagCode.getIdrDiagIcdType().equals("0") ? "10" : "9-cm";
 
-    // Sort diagnosis codes by priority prior to building resource
-    List<PreAdjMcsDiagnosisCode> dxCodes = new ArrayList<>(claimGroup.getDiagCodes());
-    dxCodes.sort(Comparator.comparingInt(PreAdjMcsDiagnosisCode::getPriority));
-
-    for (int i = 0; i < dxCodes.size(); ++i) {
-      diagnosisComponents.add(getDiagnosis(dxCodes.get(i), i + 1));
-    }
-
-    return diagnosisComponents;
+              return new Claim.DiagnosisComponent()
+                  .setSequence(diagCode.getPriority())
+                  .setDiagnosis(
+                      new CodeableConcept()
+                          .setCoding(
+                              List.of(
+                                  new Coding(
+                                      "http://hl7.org/fhir/sid/icd-" + icdVersion,
+                                      diagCode.getIdrDiagCode(),
+                                      null))));
+            })
+        .sorted(Comparator.comparing(Claim.DiagnosisComponent::getSequence))
+        .collect(Collectors.toList());
   }
 
-  private static Claim.DiagnosisComponent getDiagnosis(PreAdjMcsDiagnosisCode code, int sequence) {
-    String icdVersion = code.getIdrDiagIcdType().equals("0") ? "10" : "9";
+  private static List<Claim.ItemComponent> getItems(PreAdjMcsClaim claimGroup) {
+    return ObjectUtils.defaultIfNull(claimGroup.getDetails(), List.<PreAdjMcsDetail>of()).stream()
+        .map(
+            detail -> {
+              Claim.ItemComponent item =
+                  new Claim.ItemComponent()
+                      .setSequence(detail.getPriority())
+                      .setProductOrService(
+                          new CodeableConcept(
+                              new Coding(
+                                  "https://bluebutton.cms.gov/resources/codesystem/hcpcs",
+                                  detail.getIdrProcCode(),
+                                  null)))
+                      .setServiced(
+                          new Period()
+                              .setStart(localDateToDate(detail.getIdrDtlFromDate()))
+                              .setEnd(localDateToDate(detail.getIdrDtlToDate())))
+                      .setModifier(getModifiers(detail));
 
-    return new Claim.DiagnosisComponent()
-        .setSequence(sequence)
-        .setDiagnosis(
-            new CodeableConcept()
-                .setCoding(
-                    Collections.singletonList(
-                        new Coding(
-                            "http://hl7.org/fhir/sid/icd-" + icdVersion,
-                            code.getIdrDiagCode(),
-                            null))));
+              // Set the DiagnosisSequence only if the detail Dx Code is not null and present in the
+              // Dx table.
+              Optional.ofNullable(detail.getIdrDtlPrimaryDiagCode())
+                  .ifPresent(
+                      detailDiagnosisCode -> {
+                        Optional<PreAdjMcsDiagnosisCode> matchingCode =
+                            claimGroup.getDiagCodes().stream()
+                                .filter(
+                                    diagnosisCode ->
+                                        Objects.equals(
+                                            diagnosisCode.getIdrDiagCode(), detailDiagnosisCode))
+                                .findFirst();
+
+                        matchingCode.ifPresent(
+                            diagnosisCode ->
+                                item.setDiagnosisSequence(
+                                    List.of(new PositiveIntType(diagnosisCode.getPriority()))));
+                      });
+
+              return item;
+            })
+        .sorted(Comparator.comparing(Claim.ItemComponent::getSequence))
+        .collect(Collectors.toList());
   }
 
-  private static List<Claim.ProcedureComponent> getProcedure(PreAdjMcsClaim claimGroup) {
-    List<Claim.ProcedureComponent> procedure = new ArrayList<>();
+  private static List<CodeableConcept> getModifiers(PreAdjMcsDetail detail) {
+    List<Optional<String>> mods =
+        List.of(
+            Optional.ofNullable(detail.getIdrModOne()),
+            Optional.ofNullable(detail.getIdrModTwo()),
+            Optional.ofNullable(detail.getIdrModThree()),
+            Optional.ofNullable(detail.getIdrModFour()));
 
-    // Sort proc codes by priority prior to building resource
-    List<PreAdjMcsDetail> procCodes = new ArrayList<>(claimGroup.getDetails());
-    procCodes.sort(Comparator.comparingInt(PreAdjMcsDetail::getPriority));
-
-    for (int i = 0; i < procCodes.size(); ++i) {
-      procedure.add(getProcedure(procCodes.get(i), i + 1));
-    }
-
-    return procedure;
+    // OptionalGetWithoutIsPresent - IsPresent used in filter
+    //noinspection OptionalGetWithoutIsPresent
+    return IntStream.range(0, mods.size())
+        .filter(i -> mods.get(i).isPresent())
+        .mapToObj(
+            index ->
+                new CodeableConcept(
+                    new Coding(
+                            "https://bluebutton.cms.gov/resources/codesystem/hcpcs",
+                            mods.get(index).get(),
+                            null)
+                        .setVersion(String.valueOf(index + 1))))
+        .collect(Collectors.toList());
   }
 
-  private static Claim.ProcedureComponent getProcedure(PreAdjMcsDetail procCode, int sequence) {
-    return new Claim.ProcedureComponent()
-        .setSequence(sequence)
-        .setDate(
-            procCode.getIdrDtlToDate() == null
-                ? null
-                : Date.from(
-                    procCode.getIdrDtlToDate().atStartOfDay(ZoneId.systemDefault()).toInstant()))
-        .setProcedure(
-            new CodeableConcept()
-                .setCoding(
-                    Collections.singletonList(
-                        new Coding(
-                            "http://www.ama-assn.org/go/cpt", procCode.getIdrProcCode(), null))));
+  private static Date localDateToDate(LocalDate localDate) {
+    return localDate == null
+        ? null
+        : Date.from(localDate.atStartOfDay(ZoneId.systemDefault()).toInstant());
   }
 }
